--- a/63CNTT5N2/63CNTT5N2/bin/63CNTT5N2.dll.config
+++ b/63CNTT5N2/63CNTT5N2/bin/63CNTT5N2.dll.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="StrConnect" connectionString="Data Source=DESKTOP-DQTL138\SQLEXPRESS;Initial Catalog=63CNTT5N2;Integrated Security=True"
+    <add name="StrConnect" connectionString="Data Source=LAPTOP-IPFR9G6P;Initial Catalog=63CNTT5N2;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
